fix: submit modal z-index overlap with bottom sticky ad

--- a/css/style.css
+++ b/css/style.css
@@ -710,7 +710,7 @@ select {
 .modal {
     display: none;
     position: fixed;
-    z-index: 2000;
+    z-index: 5000;
     left: 0;
     top: 0;
     width: 100%;
